testsuite/gnat2goto/tests/character_subtype/test.opt
ALL XFAIL gnat2goto reports invalid range types and cbmc fails with an invariant violation
